--- a/YouTube Frame Count.csproj
+++ b/YouTube Frame Count.csproj
@@ -110,6 +110,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <None Include="README.md" />
     <None Include="Resources\clipboard.png" />
   </ItemGroup>
   <ItemGroup>
