--- a/YouTube Frame Count.csproj
+++ b/YouTube Frame Count.csproj
@@ -69,7 +69,7 @@
     <Compile Include="Forms\AboutWindow.Designer.cs">
       <DependentUpon>AboutWindow.cs</DependentUpon>
     </Compile>
-    <Compile Include="Helpers\DebugStringFormatter.cs">
+    <Compile Include="Helpers\DebugExtractor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\RetimeForm.cs">
